--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,12 @@ html {
 
 body {
     width: 100%;
-    height: 100vh;
+    height: 150vh;
     margin: 0;
+}
+
+.registration-body {
+    overflow: hidden;
 }
 
 .form {
